# SMD

./: .gitignore  .pre-commit-config.yaml  2653790.lua  2653791_4401022976514973949.manifest  621_3111897107378205370.manifest  CHANGELOG.md  README.md  add-to-desktop.sh  applist.py  archive.py  build.sh  content_manifest.proto  content_manifest_pb2.py  content_manifest_pb2.pyi  cracker.py  crypto.py  decrypt_manifest.py  drag.py  main.py  main.spec  pyproject.toml  requirements.txt  structs.py  test.py  test.vdf  utils.py
c/: midi_player_lib.c
smd/: applist.py  cracker.py  file_access.py  fun.py  fzf.py  game_specific.py  http_utils.py  lua_downloader.py  lua_manager.py  lua_parser.py  lua_selection.py  manifest_crypto.py  midi.py  processes.py  prompts.py  registry_access.py  secret_store.py  steam_client.py  steam_path.py  strings.py  structs.py  ui.py  updater.py  utils.py  zip.py
smd/app_injector/: applist.py  base.py  sls.py
smd/lua/: choices.py  downloader.py  endpoints.py  manager.py  selection.py  writer.py
smd/manifest/: crypto.py  downloader.py  id_resolver.py  strategies.py  ugc_resolver.py
smd/storage/: acf.py  ini_config.py  named_ids.py  settings.py  vdf.py  yaml.py
tests/: test_endpoints.py  test_main.py  test_prereqs.py
third_party_licenses/: fzf.LICENSE
typings/steam/protobufs/: content_manifest_pb2.pyi  steammessages_publishedfile_pb2.pyi
