[project]
name = "steam-manifest-decrypt"
version = "1.0.0"
description = "Decrypt steam manifest files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grpcio-tools>=1.75.1",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "isort>=6.1.0",
    "pathvalidate>=3.3.1",
    "protobuf>=3.20.3",
    "pycryptodome>=3.23.0",
    "pywin32>=311",
    "vdf>=3.4",
]
