[project]
name = "steam-manifest-decrypt"
version = "4.2.0"
description = "Decrypt steam manifest files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.9.0",
    "colorama>=0.4.6",
    "flake8>=7.3.0",
    "flake8-bugbear>=24.12.12",
    "grpcio-tools>=1.48.2",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "isort>=6.1.0",
    "keyring>=25.6.0",
    "msgpack>=1.1.2",
    "pathvalidate>=3.3.1",
    "protobuf>=3.20.3",
    "pycryptodome>=3.23.0",
    "pyinstaller>=6.16.0",
    "pynacl>=1.6.0",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    "steam[client]>=1.4.4",
    "tqdm>=4.67.1",
    "vdf>=3.4",
]

[tool.isort]
profile = "black"

[tool.uv.sources]
inquirerpy = { git = "https://github.com/kazhala/InquirerPy" }


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
changelog_incremental = true
gpg_sign = true
changelog_start_rev = "4.2.0"

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.3.0",
]
